--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,8 +2,13 @@ network: "{{ ansible_facts['default_ipv4']['network'] }}/{{ ansible_facts['defau
 domains:
 - example.com
 views:
+- name: internal
+  match-clients: 
+  - "localhost"
+  recursion: "yes"
 - name: public
-  match-clients: "any"
+  match-clients: 
+  - "any"
   recursion: "no"
 forwarders:
 - 8.8.8.8 # google
@@ -14,8 +19,8 @@ named_conf:
 - { regex: "include \"/etc/named.rfc", line: "include \"/etc/named/view.{{ views[0]['name'] }}\";" }
 ifcfg_interface:
 - { regex: "DNS[0-9]+=-", line: "DNS1=127.0.0.1" }
-- { regex: "DOMAIN=", line: "DOMAIN=\"{{ group_names | join(' ') | regex_replace('_','.') }}\"" }
+- { regex: "DOMAIN=", line: "DOMAIN=\"{{ domains | join(' ') }}\"" }
 resolv_conf:
 - { state: "absent", regex: "nameserver", line: "There can be only one!" }
 - { state: "present", regex: "nameserver", line: "nameserver 127.0.0.1" }
-- { state: "present", regex: "search", line: "search {{ group_names | join(' ') | regex_replace('_','.') }}" }
+- { state: "present", regex: "search", line: "search {{ domains | join(' ') }}" }
