--- a/tasks/localhost.yml
+++ b/tasks/localhost.yml
@@ -1,26 +1,26 @@
 - name: "Set localhost and forwarders in network interface config"
-  tags: ifcfg
+  tags: dns-localhost-ifcfg
   lineinfile:
     dest: "/etc/sysconfig/network-scripts/ifcfg-{{ item[0] }}"
     regex: "DNS{{ (ansible_loop.index <= ansible_loop.length / 2) | ternary(ansible_loop.index, ansible_loop.index - (ansible_loop.length / 2) | int) }}="
     line: "DNS{{ (ansible_loop.index <= ansible_loop.length / 2) | ternary(ansible_loop.index, ansible_loop.index - (ansible_loop.length / 2) | int) }}={{ item[1] }}"
-  loop: "{{ ansible_interfaces | select('ne','lo') | list | product((['127.0.0.1'] + forwarders) | unique) | list }}"
+  loop: "{{ ansible_interfaces | select('ne','lo') | list | product((['127.0.0.1'] + dns_forwarders) | unique) | list }}"
   loop_control:
     extended: yes
 
 - name: "Set search domain in network interface config"
-  tags: ifcfg
+  tags: dns-localhost-ifcfg
   lineinfile:
     dest: "/etc/sysconfig/network-scripts/ifcfg-{{ item }}"
     regex: "DOMAIN="
-    line: "DOMAIN={{ domains | join(' ') }}"
+    line: "DOMAIN={{ dns_domains | join(' ') }}"
   loop: "{{ ansible_interfaces | select('ne','lo') | list }}"
 
 - name: "Set localhost and forwarders in DNS resolv config"
-  tags: resolv
+  tags: dns-localhost-resolv
   lineinfile:
     dest: "/etc/resolv.conf"
     regex: "{{ item['regex'] }}"
     line: "{{ item['line'] }}"
     insertbefore: "{{ item['insertbefore'] }}"
-  loop: "{{ resolv_conf }}"
+  loop: "{{ dns_resolv_conf }}"
