--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,19 +1,12 @@
-- name: "Install required software"
-  tags: install
-  include_tasks: install.yml
-
-- name: "Configure firewall"
-  tags: firewall
-  include_tasks: firewall.yml
-
 - name: "Configure zone files"
-  tags: zone
+  tags: dns-zone
   include_tasks: zone.yml
 
 - name: "Configure named"
-  tags: config
+  tags: dns-config
   include_tasks: config.yml
 
 - name: "Configure localhost resolver"
-  tags: localhost
+  tags: dns-localhost
   include_tasks: localhost.yml
+
