--- a/tasks/zone.yml
+++ b/tasks/zone.yml
@@ -1,5 +1,5 @@
 - name: "Create forward zone file"
-  tags: forward
+  tags: dns-zone-forward
   template:
     dest: /var/named/{{ item[0] }}-{{ item[1]['name'] }}
     group: named
@@ -7,11 +7,11 @@
     mode: 0640
     setype: named_conf_t
     validate: "named-checkzone {{ item[0] }} %s"
-  loop: "{{ domains | product(views) | list }}"
+  loop: "{{ dns_domains | product(dns_views) | list }}"
   notify: "Restart named service"
 
 - name: "Create reverse zone file"
-  tags: reverse
+  tags: dns-zone-reverse
   template:
     dest: "/var/named/{{ hostvars[inventory_hostname][item[1]['name']] | default(ansible_host) | ipaddr('revdns') | regex_replace('^[0-9]+\\.') | replace('.in-addr.arpa.','-'+item[1]['name']) }}"
     group: named
@@ -19,5 +19,5 @@
     setype: named_conf_t
     src: zone-rev.ji2
     validate: "named-checkzone {{ hostvars[inventory_hostname][item[1]['name']] | default(ansible_host) | ipaddr('revdns') | regex_replace('^[0-9]+\\.') | regex_replace('_','.') }} %s"
-  loop: "{{ domains | product(views) | list }}"
+  loop: "{{ dns_domains | product(dns_views) | list }}"
   notify: "Restart named service"
